@@ -1,0 +1,19 @@
+
+barified! 
+Message: blah
+Args: @('a', 'b', 'c')
+$stuff is barified! 
+$foo is foo!
+$bar is bar!
+Message: test
+Args: @('x', 'y', 'z')
+$stuff is fooified!
+$foo is fool!
+$bar is barl!
+fooified!
+Message: &foo
+Args: @()
+$stuff is 
+$foo is 
+$bar is 
+barified! 2
